--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.video_player_control_panel_example">
+    package="jakky1.dev.video_player_control_panel_example">
    <application
         android:label="video_player_control_panel_example"
         android:name="${applicationName}"
