--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,17 @@ flutter:
   # All these are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   #plugin:
+    platforms:
+      android:
+        package: jakky1.dev.video_player_control_panel
+        pluginClass: VideoPlayerControlPanelPlugin
+      ios:
+        pluginClass: VideoPlayerControlPanelPlugin
+      windows:
+        pluginClass: VideoPlayerControlPanelPluginCApi
+      web:
+        pluginClass: VideoPlayerControlPanelWeb
+        fileName: video_player_control_panel_web.dart
         
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
