--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jakky1.dev.video_player_control_panel_example">
+   <uses-permission android:name="android.permission.INTERNET" /> <!-- Jacky -->
    <application
         android:label="video_player_control_panel_example"
         android:name="${applicationName}"
