--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A control panel laid on top of VideoPlayer. User can do play / paus
 homepage: https://github.com/jakky1/video_player_control_panel
 repository: https://github.com/jakky1/video_player_control_panel
 issue_tracker: https://github.com/jakky1/video_player_control_panel/issues
-version: 1.0.8
+version: 1.1.0
 
 platforms:
   windows:
@@ -22,10 +22,10 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
 
-  video_player: ^2.4.7
-  video_player_platform_interface: ^5.1.1
+  video_player: ^2.5.3
+  #video_player_platform_interface: ^6.0.2
   fullscreen_window: ^1.0.4
-  video_player_win: ^1.1.2
+  video_player_win: ^2.2.0
   sprintf: ^7.0.0
 
 dev_dependencies:
